/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.2'
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    google()
    jcenter()
    mavenCentral()
    maven {
        url = uri('https://repo.spring.io/milestone')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api 'org.springframework.boot:spring-boot-actuator:3.0.4'
    api 'org.apache.kafka:kafka-streams:3.3.2'
    api 'org.springframework.kafka:spring-kafka:3.0.4'
    api 'org.json:json:20230227'
    api 'com.amazonaws:aws-java-sdk:1.11.486'
    api 'io.javalin:javalin:5.2.0'
    api 'org.springframework.boot:spring-boot-starter-data-jpa'
    api 'org.eclipse.persistence:org.eclipse.persistence.jpa:4.0.1'
    api 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.14.0'
    api 'com.jayway.jsonpath:json-path:2.7.0'
    api 'mysql:mysql-connector-java:8.0.31'
    api 'org.postgresql:postgresql:42.5.1'
    api 'com.zaxxer:HikariCP:5.0.1'
    api 'org.apache.commons:commons-text:1.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
    implementation 'org.projectlombok:lombok:1.18.22'
    implementation 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
}

group = 'hu.dpc.phee'
version = '1.0.0-SNAPSHOT'
description = 'importer-rdbms'
sourceCompatibility = "17.PREVIEW"
targetCompatibility = "17.PREVIEW"

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}


//test {
//    useJUnitPlatform()
//    jvmArgs(['--enable-preview'])
//}
//
//tasks.withType(JavaCompile).each {
//    it.options.compilerArgs.add('--enable-preview')
//}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}